[metadata]
name = emfile
version = attr: emfile._version.__version__
url = https://github.com/brisvag/emfile
license = BSD 3-Clause
license_file = LICENSE
description = Basic utility to read tomography data from files in `*.em` format.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lorenzo Gaifas
author_email = lorenzo.gaifas@gmail.com
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
zip_safe = False
packages = find:
python_requires = >= 3.7
include_package_data = True
install_requires =
    numpy


[options.package_data]
* = *.txt, *.md
